welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
			marqueSol(colors(j));
                                         ^