welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var colors:Array[Color] = new Array[Color](getMondeHauteur());
	var i:Int = 0;
	var j:Int = 0;
	
	for(i <- 0 to getMondeHauteur()-1) {
		colors(i) = getCouleurSol();
		avance();
	}

	for(i <- 1 to getMondeLargeur()) {
		gauche();
		avance();
		droite();
		for(j <- colors) {
			marqueSol(colors(j));
			avance();
		}
	}
}

def marqueSol(c:Color) {
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
}
